# voice_actor_recog

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup_env.sh  speaker_recognition_example.ipynb
models/: model.pkl  scaler.pkl
src/: __init__.py  predict.py
src/features/: __init__.py  extract_features.py
src/models/: __init__.py  train_model.py
src/utils/: __init__.py  audio_utils.py
