[project]
name = "voice-actor-recog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa==0.10.1",
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "pandas==2.2.0",
    "pytest==7.4.3",
    "python-dotenv==1.0.0",
    "scikit-learn==1.4.0",
    "seaborn>=0.13.2",
    "soundfile==0.12.1",
    "torch>=2.6.0",
    "tqdm==4.66.1",
]
